# Folder_Deployment

./: README.md  main.py  pyproject.toml  topics.txt
Работа/: help.txt
